Project links adjusted.

--- a/html2epub/html2epub/README
+++ b/html2epub/html2epub/README
@@ -20,7 +20,7 @@ Description
 -----------
 
 html2epub is a tool to convert valid XHTML 1.0 Strict files to EPUB2.
-It is provided by https://github.com/skreutzer/text_processing/html2epub/html2epub/.
+It is provided by https://github.com/skreutzer/text_processing/.
 
 
 Requirements
@@ -93,6 +93,6 @@ which level of headings).
 Contact
 -------
 
-See https://github.com/skreutzer/text_processing/html2epub/html2epub/ or the
-contact form at the bottom of the page http://www.skreutzer.de/about.html.
+See https://github.com/skreutzer/text_processing/ or the contact form at
+the bottom of the page http://www.skreutzer.de/about.html.
 
