--- a/html2epub/html2epub/README
+++ b/html2epub/html2epub/README
@@ -71,7 +71,7 @@ should be downloaded and saved in the html2epub installation directory. It might
 Missing features
 ----------------
 
-Local CSS file references in <head>, @font-face file references, absolute paths for links and referenced images, table of contents based on <h1>, <h2>, <h3>, <h4>, <h5> and <h6> headers (with option to choose up to which level of headings), refuse to write invalid output (check the existence of anchor target IDs).
+@font-face file references in CSS, absolute paths for links and referenced images, table of contents based on <h1>, <h2>, <h3>, <h4>, <h5> and <h6> headers (with option to choose up to which level of headings), refuse to write invalid output (check the existence of anchor target IDs).
 
 
 Contact
