--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
 Stephan Kreutzer, Bahnhofstraße 71, 74321 Bietigheim-Bissingen, GERMANY (http://www.skreutzer.de, <skreutzer@fsfe.org>).
-
+World Wide Web Consortium (http://www.w3c.org).
+International Organization for Standardization (http://www.iso.org).
