odt2html1 supports lists now.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 Stephan Kreutzer, Bahnhofstraße 71, 74321 Bietigheim-Bissingen, GERMANY (http://www.publishing-systems.org, <skreutzer@fsfe.org>).
 World Wide Web Consortium (http://www.w3c.org).
 International Organization for Standardization (http://www.iso.org).
+Christian d'Heureuse, Ida-Sträuli-Strasse 77, 8404 Winterthur, SWITZERLAND (http://www.source-code.biz, <chdh@inventec.ch>).
 
