--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,5 @@ Stephan Kreutzer, Bahnhofstraße 71, 74321 Bietigheim-Bissingen, GERMANY (http:/
 World Wide Web Consortium (http://www.w3c.org).
 International Organization for Standardization (http://www.iso.org).
 Christian d'Heureuse, Ida-Sträuli-Strasse 77, 8404 Winterthur, SWITZERLAND (http://www.source-code.biz, <chdh@inventec.ch>).
+drcrane (https://github.com/drcrane).
 
