csv2xml1 added.

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,5 @@ Stephan Kreutzer, Bahnhofstraße 71, 74321 Bietigheim-Bissingen, GERMANY (http:/
 World Wide Web Consortium (http://www.w3c.org).
 International Organization for Standardization (http://www.iso.org).
 drcrane (https://github.com/drcrane).
+dralagen (http://dralagen.fr, https://github.com/dralagen, <dralagen@dralagen.fr>).
 
