Minor improvements, documentation_de added.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 Stephan Kreutzer, Bahnhofstraße 71, 74321 Bietigheim-Bissingen, GERMANY (http://www.publishing-systems.org, <skreutzer@fsfe.org>).
+Free Software Foundation, Inc. (http://fsf.org).
 World Wide Web Consortium (http://www.w3c.org).
 International Organization for Standardization (http://www.iso.org).
 drcrane (https://github.com/drcrane).
